--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,7 +17,7 @@ import { ClientRouter } from "astro:transitions";
   <body>
     <Header />
     <ClientRouter />
-    <div class="my-10 grid grid-cols-1 mx-auto w-1/2">
+    <div class="my-10 grid grid-cols-1 mx-auto max-sm:m-8 sm:w-xl">
       <slot />
     </div>
     <Footer />
