--- a/src/components/ui/CardPost.astro
+++ b/src/components/ui/CardPost.astro
@@ -1,4 +1,6 @@
-<div class="card w-96 shadow-sm rounded-xl">
+<div
+  class="card w-auto md:w-96 shadow-sm rounded-xl transition-all hover:scale-105"
+>
   <figure>
     <img
       src="https://img.daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.webp"
